tests/snapshots/run_wpt_conformance__trtx_reshape__squeeze__float32_4D_tensor_by_eliminating_all_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reshape.https.any.js reshape (squeeze) float32 4D tensor by eliminating all dimensions, trtx
 Failed to build graph: graph conversion failed for trtx: reshape operation missing 'newShape'

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reshapeInput: f32[1, 1, 1, 1];
  }

  nodes {
    [reshapeOutput] = reshape(reshapeInput, label="");
  }

  outputs { reshapeOutput; }
}
